--- a/src/App.css
+++ b/src/App.css
@@ -133,6 +133,17 @@ body {
   }
 }
 
+/* bmr calculator form */
+.bmr-calculator-form-styling {
+  display: flex;
+  width: 200px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  gap: 5px;
+}
+
 @media screen and (max-width: 400px) {
   .exercise-card {
     width: 280px;
