--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,7 @@ body {
   text-decoration: none;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1370px) {
   .detail-image {
     width: 300px;
     height: 300px;
@@ -141,7 +141,7 @@ body {
   justify-content: center;
   align-items: center;
   margin: auto;
-  gap: 5px;
+  gap: 1rem;
 }
 
 @media screen and (max-width: 400px) {
